Adicionei um parágrafo

--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -9,6 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est molestiae temporibus illum perspiciatis quo ea optio dolorum aliquam aut? Quidem perspiciatis iste perferendis sequi ex repellendus maiores eaque asperiores quod!</p>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero earum aperiam veniam temporibus debitis voluptatibus magnam, deserunt consequuntur nam dolorem dolores consequatur excepturi officia culpa fuga. Error dignissimos nulla aliquid!</p>
 </body>
 </html>
